--- a/_sources/index.ipynb
+++ b/_sources/index.ipynb
@@ -22,7 +22,7 @@
     "Below are some key details about the module:\n",
     "```{admonition} Lecture notes\n",
     "\n",
-    "There are both online lecture notes and printed copies. These detail all the mathematical knowledge you need for this semester of MAS108. Please have a copy - either printed or online - with you when at the lectures as I will refer to them.\n",
+    "There are both online lecture notes and printed copies. These detail all the mathematical knowledge you need for this semester of MAS108. Please have a copy - either printed or online - with you when at the lectures as I will refer to them. The original version of these notes were written by my colleague Jonathan Potts - many thanks to him for his hard work and sharing his resources with me.\n",
     "```\n",
     "```{admonition} Blackboard\n",
     "\n",
