--- a/_sources/lecture1.ipynb
+++ b/_sources/lecture1.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "A perfectly reasonable question for  you to ask when you look at your timetable is 'What is a mathematical model?' Think about what it means to build a model airplane or model village. We are taking something large, complicated and unwieldy and reducing it down to something much smaller and simpler. It still retains the essence of the thing we're interested in, but we can play with it, experiment with it, and even see how to break it. \n",
     "\n",
-    "The same idea is true of a mathematical model. The universe is a complex thing, and a central pillar of science is trying to understand various aspects of it. Mathematical modelling is very much a part of that toolkit, allowing us to answer questions about the aerodynamics of a new vehicle, how far a ball will travel when hit, the most effective dose of a drug to precscribe to a patient, whether an asteroid will enter Earth's atmosphere, and a gerat many questions besides.\n",
+    "The same idea is true of a mathematical model. The universe is a complex thing, and a central pillar of science is trying to understand various aspects of it. Mathematical modelling is very much a part of that toolkit, allowing us to answer questions about the aerodynamics of a new vehicle, how far a ball will travel when hit, the most effective dose of a drug to precscribe to a patient, whether an asteroid will enter Earth's atmosphere, and a great many questions besides.\n",
     "\n",
     "Just like a model airplane, the level of detail will vary depending on our question and how much time and expertise we have at our disposal. A simple paper dart takes the rough shape of a plane and will glide for a small while, but has very little detail. A plastic model starts to look more like a real plane and - if you're brave enough to throw it - will also glide, but it has no locomotion. A radio-controlled plane starts getting us much close to the real thing, though it's inner workings are decidedly different from a jet engine. \n",
     "\n",
@@ -31,7 +31,7 @@
     "Consider this petri dish example and write down ideas of further details it might be relevant to include.\n",
     "```\n",
     "\n",
-    "Once you have decided what things you need for answering your scientific question, you then build your mathematical model (Figure 2). This model should aim at translating your scientific question into a mathematical question. This in itself is a big challenge. How do we decide what to include? What mathematical formulations are appropriate? For much of this course I will be guiding you through these questions, demonstrating to you how to think about constructing about a model and standrad ways in which things tend to be done. My hope is that you can absorb these ideas so that you can not only repeat the things I have shown you, but start applying them to new examples. Deciding on assumptions is not an easy thing to get right, and this is one of the key reasons why modelling can end up being an iterative process of gradual improvement.\n",
+    "Once you have decided what things you need for answering your scientific question, you then build your mathematical model (Figure 2). This model should aim at translating your scientific question into a mathematical question. This in itself is a big challenge. How do we decide what to include? What mathematical formulations are appropriate? For much of this course I will be guiding you through these questions, demonstrating to you how to think about constructing about a model and standard ways in which things tend to be done. My hope is that you can absorb these ideas so that you can not only repeat the things I have shown you, but start applying them to new examples. Deciding on assumptions is not an easy thing to get right, and this is one of the key reasons why modelling can end up being an iterative process of gradual improvement.\n",
     "\n",
     "<img src=\"mas108_modelcyc.png\" alt=\"modelling cycle\" width=\"400\"/>\n",
     "\n",
@@ -116,6 +116,8 @@
     "(b) Every year, mule deer in the Greater Yellowstone Area of North America migrate so that they can find the best vegetation to eat. Suppose that you have knowledge of the distribution of vegetation at each day of the year. What day (or days) will the mule deer decide to migrate and what will be their movement trajectory?\n",
     "\n",
     "(c) A funny video is posted on a social media platform. What proportion of users end up viewing the video?\n",
+    "\n",
+    "(d) The saying goes that \"Success is 1% inspiration and 99% perspiration.\" If you were to construct a model to represent success in mathematics, what qualities would you look to include? \n",
     "```\n",
     "```{admonition} Exercise 2\n",
     "This follows from Example 2 above (population growth of rabbits).\n",
