--- a/_sources/lecture10.ipynb
+++ b/_sources/lecture10.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Lecture 10. From the second law of motion to second order ODEs \n",
     "\n",
-    "Isaac Newton was one of the greatest mathematical modellers of all time. One of his crowning achievements was the discovery of the laws of motion, in particular the second law, which says that the force on an object is equal to its mass times its acceleration, $F=m a$. This turns out to be an extremely accurate mathematical model. It breaks down if your objects are extremely small (e.g. the size of a small molecule or less) or extremely massive (e.g. the mass of a star or bigger) but is remarkably good away from those extremes.\n",
+    "While he might not have describe dhimself as such, Isaac Newton was a fantastic mathematical modeller. One of his crowning achievements was describing the laws of motion, in particular the second law, which says that the force on an object is equal to its mass times its acceleration, $F=m a$. This turns out to be an extremely accurate mathematical model. It breaks down if your objects are extremely small (e.g. the size of a small molecule or less) or extremely massive (e.g. the mass of a star or bigger) but is remarkably good away from those extremes.\n",
     "\n",
     "Now, the force may be a function of its location, $x$, and/or its speed, $s$. For example, the friction force of air on a falling object increased as its speed, $s$. As another example, the force of Earth's gravity decreases as an object's location, $x$, moves away from Earth. So we can write $F$ as a function of $x$ and $s$, i.e. $F=F(x, s)$.\n",
     "\n",
