--- a/_sources/lecture11.ipynb
+++ b/_sources/lecture11.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "Interpret each solution in terms of the motion of the spring.\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_15_41dd2eb40876053e397fg-1.jpg?height=398&width=1423&top_left_y=1754&top_left_x=319\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_damped_osc.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 16: A spring on a table, with a mass on one end and fixed at the other end.*\n",
     "\n",
@@ -103,7 +103,8 @@
     "$$\n",
     "\n",
     "where $A$ and $B$ are constants. Here, as $t \\rightarrow \\infty,(A t+B) \\exp (-\\omega t) \\rightarrow 0$ so at long times the mass moves exponentially towards its equilibrium location. In Figure (17), we see the four qualitative possibilities for the motion of $x(t)$, depending on the signs of $A$ and $B$.\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_15_41dd2eb40876053e397fg-3.jpg?height=1240&width=1215&top_left_y=234&top_left_x=409\" alt=\"drawing\" width=\"400\"/>\n",
+    "\n",
+    "<img src=\"mas108_damped_osc2png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 17: Examples of Equation (131) for various values of $A$ and $B$. Notice that for some values (e.g. $A=B=1$ in top-left and $A=B=-1$ in bottom-right) the mass returns monotonically to its resting location. For others (e.g. $A=1, B=-1$ in top-right and $A=-1, B=1$ in bottom-left) the mass moves in one direction, turns once, and then settles to its equilibrium location.*\n",
     "\n",
@@ -130,7 +131,7 @@
     "x(t)=\\exp \\left(-\\frac{\\omega t}{2}\\right)\\left[A \\sin \\left(\\frac{\\sqrt{3}}{2} \\omega t\\right)+B \\cos \\left(\\frac{\\sqrt{3}}{2} \\omega t\\right)\\right] \\tag{134}\n",
     "\\end{equation*}\n",
     "$$\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_15_41dd2eb40876053e397fg-4.jpg?height=998&width=1018&top_left_y=229&top_left_x=476\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_damped_osc3.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 18: Example of Equation (134) with $\\omega=1, A=0, B=1$*\n",
     "\n",
@@ -161,7 +162,7 @@
     "```{admonition} Exercise 24\n",
     "An elastic string of natural length $2 l_{0}$ and stiffness $k$ is stretched horizontally between two points $A$ and $B$ a distance $2 l$ apart (where $l>l_{0}$ ), in a gravity-free environment. A particle of mass $m$ attached to the midpoint $O$ of the string is drawn aside a small distance $a$, where $a<l-l_{0}$, along $A B$ and released. Let $x(t)$ be the location of the\n",
     "\n",
-    "![](https://cdn.mathpix.com/cropped/2024_08_15_41dd2eb40876053e397fg-5.jpg?height=324&width=989&top_left_y=1397&top_left_x=525)\n",
+    "<img src=\"mas108_elastic_qn.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "particle with respect to the origin, $O$.\n",
     "\n",
