--- a/_sources/lecture13.ipynb
+++ b/_sources/lecture13.ipynb
@@ -59,7 +59,7 @@
     "\\end{align*}\n",
     "$$\n",
     "\n",
-    "![](https://cdn.mathpix.com/cropped/2024_08_15_d0ed8ca75c0c4bab91c2g-2.jpg?height=280&width=809&top_left_y=157&top_left_x=629)\n",
+    "<img src=\"mas108_stretched_spring.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "Figure 20: Forces acting on the string in Example 20a.\n",
     "\n",
@@ -97,7 +97,7 @@
     "\n",
     "(b) In this case, the forces are shown in the diagram below\n",
     "\n",
-    "![](https://cdn.mathpix.com/cropped/2024_08_15_d0ed8ca75c0c4bab91c2g-2.jpg?height=392&width=803&top_left_y=1840&top_left_x=632)\n",
+    "<img src=\"mas108_stretched_damped.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "Using Newton's second law, the equation of motion is\n",
     "\n",
@@ -145,7 +145,7 @@
     "$$\n",
     "\\begin{array}{r}\n",
     "\\dot{x}\\left(\\frac{3 \\pi}{4 \\omega}\\right)=a e^{-\\frac{3 \\pi}{4}}\\left[-\\omega \\sin \\left(\\frac{3 \\pi}{4}\\right)+\\omega \\cos \\left(\\frac{3 \\pi}{4}\\right)\\right] \\\\\n",
-    "\\quad=a e^{-\\frac{3 \\pi}{4}}\\left[-\\omega \\frac{\\sqrt{2}}{2}-\\omega \\frac{\\sqrt{2}}{2}\\right]=-a e^{-\\frac{3 \\pi}{4}} \\omega \\sqrt{2} \\tag{162}\n",
+    "\\quad=a e^{-\\frac{3 \\pi}{4}}\\left[-\\omega \\frac{\\sqrt{2}}{2}-\\omega \\frac{\\sqrt{2}}{2}\\right]=-a e^{-\\frac{3 \\pi}{4}} \\omega \\sqrt{2}\n",
     "\\end{array}\n",
     "$$\n",
     "\n",
@@ -159,7 +159,7 @@
     "\n",
     "(c) In this case, the force diagram is\n",
     "\n",
-    "![](https://cdn.mathpix.com/cropped/2024_08_15_d0ed8ca75c0c4bab91c2g-3.jpg?height=287&width=1174&top_left_y=2135&top_left_x=458)\n",
+    "<img src=\"mas108_stretched_spring_forced.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "The displacement of the particle from the fixed point $A$ is now $x+a+y$. Therefore the velocity of the particle is $\\dot{x}+\\dot{y}$ and the acceleration of the particle is $\\ddot{x}+\\ddot{y}$. Using Newton's\n",
     "second law, the equation of motion is\n",
