--- a/_sources/lecture17.ipynb
+++ b/_sources/lecture17.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Gravity is a fundamental aspect of life on Earth. Almost all the motion we experience on a day-to-day basis is influenced by the effect of gravity. That is why it seems so weird and wonderful to see astronauts hovering in space capsules away from (most of) the effects of gravity, or bouncing on the Moon where the gravity is much lower than on Earth.\n",
     "\n",
-    "Consequently, being able to model the effect of gravity is a foundational aspect of our understanding of how the physical world works. There are still many unsolved problems related to understanding gravity out in the cosmos, where there are exotic objects like black holes, some of which are currently being explored by SoMaS staff. However, the effect of gravity close to the Earth's surface is something humankind has known how to model with great accuracy for a very long time.\n",
+    "Consequently, being able to model the effect of gravity is a foundational aspect of our understanding of how the physical world works. There are still many unsolved problems related to understanding gravity out in the cosmos, where there are exotic objects like black holes, some of which are currently being explored by colleagues in this School. However, the effect of gravity close to the Earth's surface is something humankind has known how to model with great accuracy for a very long time.\n",
     "\n",
     "In this lecture we will derive the equations that govern motion under gravity close to the Earth's surface. (These are sometimes known as the 'suvat' equations, for reasons that will become clear soon.) Then, in the next few lectures, we will show how to put these into practice in a variety of applications.\n",
     "\n",
@@ -99,7 +99,7 @@
     "\n",
     "We start by drawing a graph of velocity over time (Figure 25).\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_16_1daf131b1b3ede8ec322g-3.jpg?height=580&width=1405&top_left_y=144&top_left_x=334\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_vel_time_ex.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 25: Change in velocity over time.*\n",
     "\n",
@@ -125,7 +125,7 @@
     "\n",
     "As always, we start by drawing a sketch (Figure 26).\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_16_1daf131b1b3ede8ec322g-3.jpg?height=312&width=809&top_left_y=889&top_left_x=635\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_stone_cliff.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 26: Throwing a stone off a cliff*\n",
     "\n",
