--- a/_sources/lecture18.ipynb
+++ b/_sources/lecture18.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "51b2deb5",
    "metadata": {},
@@ -29,7 +30,8 @@
     "\n",
     "Suppose that the projectile is released at an angle of $\\theta$ to the horizontal. Then $x_{0}=V \\cos (\\theta)$ and $z_{0}=V \\sin (\\theta)$ where $V$ is the initial speed of the projectile (Figure 27).\n",
     "\n",
-    "![](https://cdn.mathpix.com/cropped/2024_08_16_ea3ba10b38520fd3752bg-1.jpg?height=497&width=809&top_left_y=1579&top_left_x=635)\n",
+    "<img src=\"mas108_projectile1.png\" alt=\"drawing\" width=\"400\"/>\n",
+    "\n",
     "Figure 27: A projectile released at an angle $\\theta$ from the horizontal.\n",
     "\n",
     "Now, since the acceleration due to gravity is in the negative $\\mathbf{k}$-direction, we have $\\mathbf{a}=-g \\mathbf{k}$, where $g$ is the gravitational constant. We can now put these expressions for $\\mathbf{u}$ and $\\mathbf{a}$ into Equation (211) (which says $\\mathbf{v}(t)=\\mathbf{a} t+\\mathbf{u}$ ). This gives\n",
@@ -103,7 +105,7 @@
     "```{prf:example}\n",
     "A person hits a ball with a bat at a height of 1 meter above the ground. The ball's initial speed is $25 \\mathrm{~ms}^{-1}$ at an angle of $\\frac{\\pi}{6}$ radians above the horizontal. Find the horizontal distance from the person to the place where the ball first bounces, assuming $g=9.8$.\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_16_ea3ba10b38520fd3752bg-3.jpg?height=569&width=906&top_left_y=144&top_left_x=586\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_projectile_ex.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 28: The trajectory of a ball.*\n",
     "\n",
