--- a/_sources/lecture19.ipynb
+++ b/_sources/lecture19.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "As always, we start with a sketch (Figure 29).\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_16_095b133f647f5daf1c3ag-1.jpg?height=283&width=1079&top_left_y=841&top_left_x=494\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_student_in_lift.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 29: Student in a lift.*\n",
     "\n",
