--- a/_sources/lecture2.ipynb
+++ b/_sources/lecture2.ipynb
@@ -43,7 +43,9 @@
     "\n",
     "noting that $r>-1$ (since $0 \\leq d \\leq 1$ and $a>0$ ). The model in Equation (5) is called the discrete exponential model (or sometimes just 'exponential model' for short). We call $r$ the net reproduction rate when we are modelling population growth. However, Equation (5) can be used to model anything whose growth over time is proportional to its value. For example, we can use it to model the growth of someone's student loan debt over time once the have finished University. Here, $U(t)$ is the value of the debt and $r$ is the interest rate.\n",
     "\n",
-    "For now let's go back to our rabbits on an island. Suppose the net reproductive rate is $r=1$, which is big, but rabbits are well-known as prolific breeders.\n",
+    "For now let's go back to rabbits. Rabbits were introduced into Australia by European settlers. Until around 1860 they were kept in secure cages/enclosures. One wise soul then decided to release a small number of rabbits for hunting. Let's model what happened next.\n",
+    "\n",
+    "Suppose the net reproductive rate is $r=1$, which is fairly big, but rabbits are well-known as prolific breeders.\n",
     "\n",
     "| Time, $t$ years | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 |\n",
     "| :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- |\n",
@@ -51,7 +53,7 @@
     "\n",
     "*Table 1: Change in rabbit population over time, using the model in Equation (5) with $r=1$ and $U(0)=10$.*\n",
     "\n",
-    "In Table 1 we see that after 10 years, we have more than ten thousand rabbits on our island. Let's hope it's a reasonably big island! You may have noticed that $U(t)=U(0) 2^{t}$. Indeed, we have the following general result\n",
+    "In Table 1 we see that after 10 years, we have more than ten thousand rabbits on our island. This may sound incredible but in fact evidence suggests that rabbit numbers reached well over a million in Australia within 10 years of their first release. You may have noticed that $U(t)=U(0) 2^{t}$. Indeed, we have the following general result\n",
     "\n",
     "```{prf:proposition}\n",
     ":label: prop2_1\n",
@@ -66,9 +68,9 @@
     "```{note}\n",
     "RHS stands for 'right-hand side' and $L H S$ stands for 'left-hand side'.\n",
     "```\n",
-    "We can use the result of Proposition (1) to calculate the number of rabbits in $N$ years time for any $N$. For example, assuming $r=1$, in 20 years time there will be $10 \\times 2^{20}$ rabbits, which is more than ten million. In 30 years there will be more than ten billion. As it happens, these numbers are not far off what really happened in Austrtalia during the late 1800s and early 1900s. However, if we keep going, in 270 years, there will be more rabbits on the island than atoms in the known universe, which is both a flat contradiction and terrifying. The moral of the story is, unless we are only concerned with short times, we will need a better model.\n",
+    "We can use the result of Proposition (1) to calculate the number of rabbits in $N$ years time for any $N$. For example, assuming $r=1$, in 20 years time there will be $10 \\times 2^{20}$ rabbits, which is more than ten million. Again, these numbers are if anything an under-prediction of what really happened in Austrtalia during the late 1800s and early 1900s. In 30 years there will be more than ten billion.  However, if we keep going, in 270 years, there will be more rabbits on the island than atoms in the known universe, which is both a flat contradiction and terrifying. The moral of the story is, unless we are only concerned with short times, we will need a better model.\n",
     "\n",
-    "So what is missing in our current model? Well, it currently does not account for the fact that rabbits must eat in order to survive and reproduce, and there is only a finite amount of vegetation on the island. To model this fact, we incorporate a competition term, $r U^{2}(t) / K$, as follows\n",
+    "So what is missing in our current model? Well, it currently does not account for the fact that rabbits must eat in order to survive and reproduce, and there is only a finite amount of vegetation on the continent. To model this fact, we incorporate a competition term, $r U^{2}(t) / K$, as follows\n",
     "\n",
     "$$\n",
     "\\begin{equation*}\n",
@@ -171,9 +173,7 @@
     "$$\n",
     "```\n",
     "````{prf:proof}\n",
-    "[This is a bit tedious and uninspiring so don't worry about understanding it in full. I just put it in for completeness.] Plugging Equation (11) into the right-hand side of Equation\n",
-    "\n",
-    "(9) gives\n",
+    "[This is a bit tedious and uninspiring so don't worry about understanding it in full. I just put it in for completeness.] Plugging Equation (11) into the right-hand side of Equation (9) gives\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -216,7 +216,7 @@
     "```{admonition} Exercise 3\n",
     "For the logistic model (Equation 7), when $U(0)=10$ and $K=100$, calculate $U(1), \\ldots, U(10)$ for the following values of $r$ : (a) $r=1$, (b) $r=1.5$, (c) $r=2.2$, (d) $r=2.5$, (e) $r=3$.\n",
     "\n",
-    "Plot the graph of $U(t)$ against $t$ for each of the five cases and describe the solution qualitatively. If you are keen, you can extend this to values higher than $t=10$. Feel free to use a computer package (e.g. Excel), if you know how, but this is not mandatory.\n",
+    "Plot the graph of $U(t)$ against $t$ for each of the five cases and describe the solution qualitatively. If you are keen, you can extend this to values higher than $t=10$. Feel free to use a computer package (e.g. Python, R, Excel), if you know how, but this is not mandatory - you can do just fine with a calculator.\n",
     "```\n",
     "```{admonition} Exercise 4\n",
     "Another model of population growth is given by\n",
