--- a/_sources/lecture4.ipynb
+++ b/_sources/lecture4.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "The last couple of lectures introduced a wealth of new concepts, which might have felt a bit overwhelming! This lecture, we are going to shift down gears with the mathematical investigations and just explore a few examples of difference equation models\n",
     "\n",
-    "````{prf:example}\n",
+    "````{prf:example} Paying off a mortgage.\n",
     ":label: ex4_1\n",
-    "Paying off a mortgage. Suppose you buy a house and borrow $M$ pounds from the bank as a mortgage. The bank charges interest at a rate of $R \\%$ per year, and each year you pay $s$ pounds to the bank. How long does it take to pay off your mortgage, as a function of $M, R$, and $s$ ? Writing $r=R / 100$, find the numerical value of this time when $M=200,000$, $s=10,000$, and $r=0.02$. Are there any values of $M, R$, and $s$ for which you will never pay off your mortgage?\n",
+    "Suppose you buy a house and borrow $M$ pounds from the bank as a mortgage. The bank charges interest at a rate of $R \\%$ per year, and each year you pay $s$ pounds to the bank. How long does it take to pay off your mortgage, as a function of $M, R$, and $s$ ? Writing $r=R / 100$, find the numerical value of this time when $M=200,000$, $s=10,000$, and $r=0.02$. Are there any values of $M, R$, and $s$ for which you will never pay off your mortgage?\n",
     "\n",
     "**Solution.**\n",
     "\n",
@@ -58,8 +58,9 @@
     "\n",
     "You will not get a solution if $r M>s$, so in this case you will never pay off your mortgage. This is because the annual payments are not sufficient even for paying off the interest on the mortgage.\n",
     "````\n",
-    "````{prf:example}\n",
-    ":label: ex4_2 Including a gestation period into population models. Suppose we have a population of organisms that breed every month at a rate $r$ but there is a gestation period of a month (i.e. a month between breeding and giving birth). Denote by $U(t)$ the number of breeding pairs at time $t$ and assume no organisms die.\n",
+    "````{prf:example} Including a gestation period into population models. \n",
+    ":label: ex4_2 \n",
+    "Suppose we have a population of organisms that breed every month at a rate $r$ but there is a gestation period of a month (i.e. a month between breeding and giving birth). Denote by $U(t)$ the number of breeding pairs at time $t$ and assume no organisms die.\n",
     "\n",
     "(a) Construct a difference equation model of the change in population size over time.\n",
     "\n",
@@ -101,9 +102,9 @@
     "````\n",
     "Notice that, for $r=1$, the positive value of $S_{*}$ is called the Golden Ratio. If you have never heard of the Golden Ratio then look it up using your favourite search engine. There are many claims about its relation to a wide range of applications (some more dubious than others).\n",
     "\n",
-    "````{prf:example}\n",
+    "````{prf:example} Predicting the weather. \n",
     ":label: ex4_3\n",
-    "Predicting the weather. Suppose that there is a probability $p$ of there being a dry day (no rain) after a wet day (some rain) and a probability $q$ of there being a dry day after a dry day. Suppose it is a dry day today. What is the probability that it will be a dry day in $t$ days time, as a function of $p$ and $q$ ? Find the numerical value for $p=0.2$, and $q=0.8$, and $t=1,2,3,4,5$.\n",
+    "Suppose that there is a probability $p$ of there being a dry day (no rain) after a wet day (some rain) and a probability $q$ of there being a dry day after a dry day. Suppose it is a dry day today. What is the probability that it will be a dry day in $t$ days time, as a function of $p$ and $q$ ? Find the numerical value for $p=0.2$, and $q=0.8$, and $t=1,2,3,4,5$.\n",
     "\n",
     "**Solution.**\n",
     "\n",
@@ -125,9 +126,9 @@
     "\n",
     "If $p=0.2$ and $q=0.8$ then $U(t)=1,0.8,0.68,0.61,0.56,0.54$ for $t=0,1,2,3,4,5$ respectively. Note that $U(0)=1$ because the question stated 'it is a dry day today'.\n",
     "````\n",
-    "````{prf:example}\n",
+    "````{prf:example} Competing species. \n",
     ":label: ex4_4\n",
-    "Competing species. Suppose we have two competing species of organisms in the same place, for example rabbits and sheep competing for edible vegetation. Denote by $U(t)$ and $V(t)$ the number of organisms of each species given in some arbitrary unit (for example, there could be $U(t)$ thousand rabbits and $V(t)$ thousand sheep). We can model this as follows\n",
+    "Suppose we have two competing species of organisms in the same place, for example rabbits and sheep competing for edible vegetation. Denote by $U(t)$ and $V(t)$ the number of organisms of each species given in some arbitrary unit (for example, there could be $U(t)$ thousand rabbits and $V(t)$ thousand sheep). We can model this as follows\n",
     "\n",
     "$$\n",
     "\\begin{align*}\n",
