--- a/_sources/lecture8.ipynb
+++ b/_sources/lecture8.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Lecture 8. Nature's non-linearity and the need for qualitative solutions \n",
     "\n",
-    "Many larger, sexually-reproducing animals disperse as adolescents to find a new place to live. This is probably an evolved tactic to make it less likely for individuals to mate with those they are closely related to (that's why humans disperse to different universities as teenagers, right?).\n",
+    "Many larger, sexually-reproducing animals disperse as adolescents to find a new place to live. This may wel be an evolved trait to make it less likely for individuals to mate with those they are closely related to.\n",
     "\n",
-    "A dispersing animal will want to find the 'best place' to live on the landscape, which may mean the place with the most access to the resources it needs, or away from danger, or a combination thereof. Suppose we can quantify the 'quality' of the landscape (as perceived by the animal) as a function $G(x)$, where $x$ is space. Here we are assume (for simplicity despite lack of realism) that the landscape is one dimensional. Then a simple model of animal movement might assume that the change in location over time is equal to the gradient of $G(x)$ (Figure 9), so define $g(x)=\\frac{\\mathrm{d} G}{\\mathrm{~d} x}$.\n",
+    "A dispersing animal will want to find the 'best place' to live on the landscape, which may mean the place with the most access to the resources it needs, or away from danger, or a combination thereof. Suppose we can quantify the 'quality' of the landscape (as perceived by the animal) as a function $G(x)$, where $x$ is space. Here we are assuming (for simplicity despite lack of realism) that the landscape is one dimensional. Then a simple model of animal movement might assume that the change in location over time is equal to the gradient of $G(x)$ (Figure 9), so define $g(x)=\\frac{\\mathrm{d} G}{\\mathrm{~d} x}$.\n",
     "\n",
     "<img src=\"mas108_anim_disp.png\" alt=\"drawing\" width=\"800\"/>\n",
     "\n",
@@ -74,7 +74,7 @@
     "We can draw a diagram of this, as shown in Figure (10). We simply draw a straight line, put\n",
     "dots at the points where $\\sin (x)=0$, and flow arrows denoting the direction of change of $x$. This is called the phase line.\n",
     "\n",
-    "<img src=\"mas108_sin_pl\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_sin_pl.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 10: Here we plot $\\sin (x)$ with the corresponding phase line beneath. We can see that the unstable equilibria are $x=2 \\pi n$ for $n \\in \\mathbb{Z}$ whilst the stable equilibria are $x=(2 n+1) \\pi$ for $n \\in \\mathbb{Z}$.*\n",
     "\n",
