--- a/_sources/lecture9.ipynb
+++ b/_sources/lecture9.ipynb
@@ -46,7 +46,7 @@
     "3. Repeat this process for multiple values of $t$ and $U$ to map out the flow in $(t, U)$ space.\n",
     "4. By following the directions of the arrows, the solution curves of the ODE can be determined.\n",
     "\n",
-    "It helps to start by drawing a table of values of $\\dot{U}$ for a variety of pairs of values of $(t, U)$. An example is shown in Table 8 (Excel can help you construct this). Then, for each cell in this table, plot an arrow whose gradient is given by the value in the cell and whose location is given by the corresponding value of $U$ and $t$.\n",
+    "It helps to start by drawing a table of values of $\\dot{U}$ for a variety of pairs of values of $(t, U)$. An example is shown in Table 8 (programming or spreadsheet software can help you construct this). Then, for each cell in this table, plot an arrow whose gradient is given by the value in the cell and whose location is given by the corresponding value of $U$ and $t$.\n",
     "\n",
     "Figure 13 gives the result of this procedure (red arrows), where we have plotted a slightly wider range of values that that shown in Table 8. For example, if we look at the point on the graph where $t=\\pi$ and $U=0.5$, we find an arrow with gradient 0.75 , highlighted in red in Table 8.\n",
     "\n",
