--- a/_sources/lecture12.ipynb
+++ b/_sources/lecture12.ipynb
@@ -57,7 +57,7 @@
     "\\end{align*}\n",
     "$$\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_15_6ccf74bd3abd64ce60c8g-2.jpg?height=1009&width=1011&top_left_y=147&top_left_x=523\" alt=\"drawing\" width=\"200\"/>\n",
+    "<img src=\"mas108_forced_osc_both.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 19: Left-hand plot shows the situation when the system is in equilibrium. The righthand plot is when the system is in motion.*\n",
     "\n",
