--- a/_sources/lecture15.ipynb
+++ b/_sources/lecture15.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "So far, we have only looked at particles that move in one dimension. However, given that space has (at least) three spatial dimensions, this is very limiting in terms of what we can model about the physical world. To extend the ideas from previous lectures into higher dimensions, we need vectors, which you have been studying in your Core module. For example, suppose there is a particle $P$ moving in 3 dimensions, as in Figure 21. Then its location at time $t$ is given by a vector, which we call $\\mathbf{r}(t)$. (Note that we use bold font for vectors.) As $t$ changes, $P$ traces out a curve, called the path of the particle.\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_16_058de69f86454c22e667g-1.jpg?height=529&width=826&top_left_y=752&top_left_x=615\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_3D_particle.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 21: A particle moving in 3 dimensions, tracing out a path.*\n",
     "\n",
@@ -36,7 +36,7 @@
     "\n",
     "Therefore the particle moves away from $O$ in the direction of g , and its distance from $O$ at time $t$ is $g t^{2} / 2$. A sketch of the path is given below.\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_16_058de69f86454c22e667g-1.jpg?height=343&width=803&top_left_y=2287&top_left_x=632\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_3D_particle_ex.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "```\n",
     "Now we have shown how to describe the location of a particle, we also want to be able to describe its velocity and acceleration. For this, we need to know how to differentiate vectors.\n",
@@ -132,7 +132,7 @@
     "\n",
     "In this limit, the velocity of the particle is along the tangent to the path.. Hence we can view the velocity at a point as the tangent vector to the path of motion at that point.\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_16_058de69f86454c22e667g-3.jpg?height=600&width=807&top_left_y=1302&top_left_x=633\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_geom_vel.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 22: Geometric interpretation of velocity*\n",
     "\n",
