--- a/_sources/lecture16.ipynb
+++ b/_sources/lecture16.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "The most important thing to do at the start of any question on relative motion is to draw a sketch. This is given in Figure 23.\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_16_18238ff787b17a985cb6g-1.jpg?height=435&width=1015&top_left_y=1433&top_left_x=526\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_relative_boat_motion.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 23: Relative motion of two boats.*\n",
     "\n",
@@ -111,7 +111,7 @@
     "\n",
     "As always, we start by drawing a sketch of the situation, which is shown in Figure (24).\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_16_18238ff787b17a985cb6g-3.jpg?height=495&width=812&top_left_y=918&top_left_x=631\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_cycle_wind.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 24: Cyclist in the wind.*\n",
     "\n",
@@ -152,14 +152,20 @@
     "$$\n",
     "\n",
     "and $u$ is a constant. Let $d$ be the distance in metres between the aircraft.\n",
+    "\n",
     "(a) Show that $d^{2}=2225(t-4)^{2}+[60-(50-u) t]^{2}$.\n",
+    "\n",
     "(b) Show that if $u=35$ then the aircraft are on a collision course.\n",
+    "\n",
     "(c) Find the minimum value of $d$ when $u=50$.\n",
     "```\n",
     "```{admonition} Exercise 32. \n",
     "An eagle is flying with velocity $2 \\mathbf{j} \\mathrm{ms}^{-1}$ (where $\\mathrm{ms}^{-1}$ stands for 'metres per second'). An owl is flying with velocity $u \\mathbf{i}+v \\mathbf{j} \\mathrm{ms}^{-1}$.\n",
+    "\n",
     "(a) Write down an expression for the velocity of the owl relative to the eagle.\n",
+    "\n",
     "(b) To the eagle, the owl appears to have velocity in the direction $-\\mathbf{i}$. Show that $u<0$ and $v=2$.\n",
+    "\n",
     "(c) The eagle now increases its speed so that its velocity is now $4 \\mathrm{j} \\mathrm{ms}^{-1}$, but the owl does not change its velocity. It now appears to the eagle that the velocity of the owl is in the direction $-\\mathbf{i}-\\mathbf{j}$. Show that the speed of the owl is $2 \\sqrt{2} \\mathrm{~ms}^{-1}$ and state its direction.\n",
     "```\n"
    ]
